--- a/rounded-corners/index.html
+++ b/rounded-corners/index.html
@@ -18,12 +18,39 @@
 	but we're putting styles here because we want to showcase
 	the css alongside the markup
 	*/
+	.example {
+		background-color: gray;
+		height: 100px;
+		text-align: center;
+	}
+
+	.round1 {
+		border-radius: 25px;
+	}
+	.round2 {
+		border-radius: 50px;
+	}
+	.round3 {
+		border-radius: 100px;
+	}
 
   </style>
   
 </head>
 <body>
   <div id="wrap">
+  	<h3>Rounded corners make use of the border-radius property</h3>
+	<div class="example round1">
+		This has a border radius property of 25px 
+	</div>
+	<br />
+	<div class="example round2">
+		This has a border radius property of 50px 
+	</div>
+	<br />
+	<div class="example round3">
+		This has a border radius property of 100px 
+	</div>
 
 
   </div>
